--- a/src/Header.css
+++ b/src/Header.css
@@ -63,7 +63,7 @@
 
 /* CTA Button */
 .btn {
-  background-color: #881828;
+  background-color: #25D366;
   color: #fff;
   font-weight: bold;
   padding: 0.5rem 1.25rem;
@@ -73,7 +73,7 @@
   transition: 0.5s background-color;
 }
 .btn:hover {
-  background-color: #750e1e;
+  background-color: #1ca04c;
 }
 
 /* Hamburger */
@@ -136,6 +136,7 @@
   }
 
   .nav .btn {
-    width: fit-content;
+    width: 30%;
+    text-align: center;
   }
 }
