--- a/src/Hero.css
+++ b/src/Hero.css
@@ -38,7 +38,27 @@
   position: relative;
   z-index: 3;
   padding: 2rem;
+  display: inline-block; /* so overlay only wraps content width */
 }
+
+.content-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+
+  -webkit-mask-image: radial-gradient(circle, rgba(0,0,0,1) 85%, rgba(0,0,0,0) 100%);
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  -webkit-mask-size: cover;
+
+  z-index: -1;
+}
+
+
+
 
 .hero-content h1 {
   font-size: 2.5rem;
@@ -62,5 +82,14 @@
 }
 
 .hero-content button:hover {
-  background-color: #881828;
+  background-color: #a5283b;
+}
+.hero-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4); /* semi-transparent dark overlay */
+  z-index: 2;
 }
