--- a/src/Header.css
+++ b/src/Header.css
@@ -64,13 +64,14 @@
 /* CTA Button */
 .btn {
   background-color: #25D366;
-  color: #fff;
+  color: white;
   font-weight: bold;
   padding: 0.5rem 1.25rem;
   border: none;
   border-radius: 6px;
   cursor: pointer;
   transition: 0.5s background-color;
+
 }
 .btn:hover {
   background-color: #1ca04c;
